Finalisation de la localisation et application des bonnes constantes

--- a/Marvel/View/Localization/fr.lproj/Localizable.strings
+++ b/Marvel/View/Localization/fr.lproj/Localizable.strings
@@ -17,4 +17,5 @@
 "inker" = "encreur";
 "inker (cover)" = "encreur (couverture)";
 "painter (cover)" = "peintre (couverture)";
-
+"comics_new" = "Nouveau";
+"comics_to_come" = "Prochainement";
