Recherche plus jolie avec du padding et des images

--- a/Marvel/View/Localization/fr.lproj/Localizable.strings
+++ b/Marvel/View/Localization/fr.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 */
 "OnSaleDate" = "Date de sortie";
 "Comic" = "Bande dessinée";
-"Characters" = "Personnage";
+"Characters" = "Personnages";
 "colorist" = "illustration";
 "colorist (cover)" = "illustration (couverture)";
 "editor" = "editeur";
