Ajout d'un bouton pour afficher le texte traduit et le texte original

--- a/Marvel/View/Localization/fr.lproj/Localizable.strings
+++ b/Marvel/View/Localization/fr.lproj/Localizable.strings
@@ -22,3 +22,5 @@
 "summary" = "description";
 "search" = "Rechercher";
 "SeeMore" = "Voir plus";
+"DisplayOriginalText" = "Voir le texte original";
+"DisplayTranslatedText" = "Afficher le texte traduit";
