Diffable data source pour la liste des comics Résumé mieux mis dans les comics

--- a/Marvel/View/Localization/fr.lproj/Localizable.strings
+++ b/Marvel/View/Localization/fr.lproj/Localizable.strings
@@ -24,3 +24,4 @@
 "SeeMore" = "Voir plus";
 "DisplayOriginalText" = "Voir le texte original";
 "DisplayTranslatedText" = "Afficher le texte traduit";
+"Reloading" = "Actualisation";
