Ajout header pour la recherche. Couleur rouge pour le bouton de retour

--- a/Marvel/View/Localization/fr.lproj/Localizable.strings
+++ b/Marvel/View/Localization/fr.lproj/Localizable.strings
@@ -25,3 +25,4 @@
 "DisplayOriginalText" = "Voir le texte original";
 "DisplayTranslatedText" = "Afficher le texte traduit";
 "Reloading" = "Actualisation";
+"LastResearch" = "Dernières recherches";
